# bag_cut

./: README.md
bag2image/: test.py
src/: CMakeLists.txt  package.xml  read_rosbag.cpp
